--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Jon Portnoy
 copyright_year   = 2013
 
-version = 1.000000
+version = 1.001001
 
 [@Basic]
 [MetaJSON]
@@ -46,6 +46,7 @@ repository.type = git
 [Prereqs]
 perl          = 5.006
 Carp          = 0
+overload      = 0
 strictures    = 1
 Scalar::Util  = 0
 Time::HiRes   = 0
