use Object::ArrayType::New
	modified:   dist.ini
	modified:   lib/Object/RateLimiter.pm
	modified:   t/limit.t

--- a/dist.ini
+++ b/dist.ini
@@ -50,7 +50,9 @@ overload      = 0
 Scalar::Util  = 0
 Time::HiRes   = 0
 
-List::Objects::WithUtils = 2
+Class::Method::Modifers   = 0
+List::Objects::WithUtils  = 2
+Object::ArrayType::New    = 0.002001
 
 namespace::clean = 0
 
