--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Jon Portnoy
 copyright_year   = 2013
 
-version = 1.001001
+version = 1.001002
 
 [@Basic]
 [MetaJSON]
@@ -49,7 +49,7 @@ overload      = 0
 Scalar::Util  = 0
 Time::HiRes   = 0
 
-Class::Method::Modifers   = 0
+Class::Method::Modifiers   = 0
 List::Objects::WithUtils  = 2
 Object::ArrayType::New    = 0.002001
 
