--- a/dist.ini
+++ b/dist.ini
@@ -13,9 +13,11 @@ version = 1.001002
 allow_dirty  = Changes
 allow_dirty  = dist.ini
 allow_dirty  = README.mkdn
+allow_dirty  = cpanfile
 add_files_in = Changes
 add_files_in = dist.ini
 add_files_in = README.mkdn
+add_files_in = cpanfile
 tag_format   = '%v'
 tag_message  = 'dist %v'
 untracked_files = warn
@@ -43,20 +45,7 @@ repository.type = git
 [Test::Synopsis]
 [Test::UnusedVars]
 
-[Prereqs]
-Carp          = 0
-overload      = 0
-Scalar::Util  = 0
-Time::HiRes   = 0
-
-Class::Method::Modifiers   = 0
-List::Objects::WithUtils  = 2
-Object::ArrayType::New    = 0.002001
-
-namespace::clean = 0
-
-[Prereqs / TestRequires]
-Test::More = 0.88
+[Prereqs::FromCPANfile]
 
 [Run::AfterBuild]
 run = cp %d%pREADME.mkdn .
